--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@ar-js-org/ar.js": "^3.4.1",
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "file-loader": "^6.2.0",
-    "mind-ar": "^1.1.5",
-    "three-stl-loader": "^1.0.6",
+    "three": "^0.146.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
