--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.2",
     "@popperjs/core": "^2.11.6",
+    "@rails/actioncable": "^7.0.4",
     "bootstrap": "^5.2.2",
     "file-loader": "^6.2.0",
     "three": "^0.146.0",
